# MinimalOS

./: .clangd  .gitignore  .gitmodules  Cargo.toml  EXECUTIVE_SUMMARY.md  Makefile  Makefile.custom  Makefile.uefi  QUESTS.md  README.md  STATUS_INDEX.md  STATUS_SUMMARY.md  STATUS_VISUAL.txt  compile_commands.json  grub.cfg  kernel.ld  kernel.ld.old  limine.cfg  limine.conf  linker.ld  rust-toolchain.toml  user.ld
.cargo/: config.toml
.github/: copilot-instructions.md  release.yml
.github/workflows/: build.yml  docs.yml
actors/chaos/: Cargo.toml
actors/chaos/src/: lib.rs
actors/ps2_keyboard/: Cargo.toml
actors/ps2_keyboard/src/: lib.rs
actors/ps2_mouse/: Cargo.toml
actors/ps2_mouse/src/: lib.rs
actors/sdk/: Cargo.toml
actors/sdk/src/: lib.rs
actors/shell/: Cargo.toml
actors/shell/src/: lib.rs
actors/ui_server/: Cargo.toml
actors/ui_server/src/: lib.rs
actors/vfs/: Cargo.toml
actors/vfs/src/: lib.rs
apps/hello_wasm/: Cargo.toml
apps/hello_wasm/src/: lib.rs
arch/i386/: boot.s  linker.ld
arch/x86_64/: boot.asm  linker.ld
assets/: font.psf
boot/: limine.conf
crates/kdisplay/: Cargo.toml
crates/kdisplay/src/: lib.rs
crates/khal/: Cargo.toml
crates/khal/src/: apic.rs  ioapic.rs  keyboard.rs  lib.rs  mouse.rs  pic.rs  port.rs  ramdisk.rs  serial.rs
crates/klog/: Cargo.toml
crates/klog/src/: lib.rs
docs/: 01-overview.md  02-build-system.md  03-boot-sequence.md  04-memory.md  05-architecture-x86.md  06-scheduling.md  07-capabilities-ipc.md  08-wasm-runtime.md  09-hal-crates.md  10-actors.md  11-capability-map.md  12-known-limitations.md  CNAME  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  PROGRESS.md  README.md  _config.yml  architecture.html  architecture.md  development_guide.md  drivers.md  getting-started.html  getting-started.md  index.html  index.md  kernel_architecture.md  memory_management.md  process_management.md  roadmap.html  roadmap.md  style.css  syscalls.md  userspace.md
docs/assets/css/: style.scss
docs/subsystems/: boot.html  boot.md  capabilities.html  capabilities.md  index.html  index.md  interrupts.html  interrupts.md  memory.html  memory.md  scheduler.html  scheduler.md  syscalls.html  syscalls.md  userspace.html  userspace.md
drivers/: font.c  framebuffer.c  keyboard.c  serial.c  timer.c
include/asm/: defines.inc
include/minimalos/: bootinfo.h  multiboot2.h  types.h
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml  build.rs  kernel.c  linker.ld  multiboot2.c  shell.c  syscall.c  tty.c
kernel/arch/i386/: gdt.c  gdt_flush.s  idt.c  idt_flush.s  irq.c  irq_stub.s  isr.c  isr_stub.s  switch.s  usermode.s
kernel/arch/x86_64/: gdt.c  gdt_flush.s  idt.c  idt_flush.s  irq.c  irq_stub.s  isr.c  isr_stub.s  isr_stubs.asm  pic.c  switch.asm  switch.s  syscall.asm  tss.asm  tss_setup.c  user.asm  usermode.s
kernel/commands/: basic.c  display.c  memory.c  sysinfo.c  tests.c  utils.c
kernel/fs/: demo_initrd.c  initrd.c  vfs.c
kernel/include/: idt.h  initrd.h  keyboard.h  kheap.h  multiboot2.h  pic.h  pmm.h  process.h  scheduler.h  serial.h  syscall.h  timer.h  tss.h  user.h  vfs.h
kernel/include/kernel/: commands.h  framebuffer.h  gdt.h  idt.h  irq.h  isr.h  keyboard.h  kheap.h  paging.h  pmm.h  process.h  scheduler.h  shell.h  syscall.h  timer.h  tty.h
kernel/mm/: kheap.c  paging.c  pmm.c
kernel/process/: process.c  scheduler.c  syscall.c
kernel/src/: cap.rs  ipc.rs  main.rs  wasm.rs
kernel/src/arch/: gdt.rs  idt.rs  mod.rs  smp.rs  syscall.rs  tss.rs
kernel/src/arch/x86_64/: acpi.rs  boot.rs  cpu.rs  gdt.rs  idt.rs  ioapic.rs  lapic.rs  mod.rs  pci.rs  serial.rs  smp.rs  syscall.rs
kernel/src/cap/: cnode.rs  mod.rs
kernel/src/drivers/: framebuffer.rs  mod.rs
kernel/src/fs/: elf.rs  mod.rs  ramdisk.rs  tar.rs
kernel/src/ipc/: endpoint.rs  message.rs  mod.rs
kernel/src/memory/: address.rs  heap.rs  mod.rs  paging.rs  pml4.rs  pmm.rs  remap.rs  vmm.rs
kernel/src/sched/: context.rs  mod.rs  percpu.rs  process.rs  scheduler.rs  thread.rs
kernel/src/sync/: mod.rs  spinlock.rs
kernel/src/task/: clock.rs  events.rs  futex.rs  input.rs  mod.rs  pipe.rs  process.rs  usermode.rs  window.rs
kernel/src/traps/: handlers.rs  idt.rs  mod.rs
kernel/src/util/: logger.rs  mod.rs  panic.rs
kernel/user/: user.c
ramdisk/: .gitignore  chaos.wasm  display_server.elf  hello.txt  ps2_keyboard.wasm  ps2_mouse.wasm  readme.txt  shell.wasm  ui_server.wasm  vfs.wasm
sdk/sys/src/: lib.rs
src/arch/x86_64/: apic.c  apic.h  context.asm  cpu.c  cpu.h  idt.c  idt.h  isr.c  isr_stubs.asm  pic.c  pic.h  syscall.c  syscall.h  syscall_entry.asm  timer.c  timer.h
src/boot/: boot.S  boot.asm  boot.asm.backup  boot64.S  gdt.asm  long_mode.asm  multiboot.asm  multiboot2.S  multiboot2.asm
src/boot/legacy/: boot.asm
src/boot/uefi/: boot.c
src/drivers/: font.h  framebuffer.c  framebuffer.h  serial.c  vga.c
src/kernel/: entry.asm  kernel.c  main.c  memory.c  memory.h  multiboot2.c  panic.c  printk.c  serial.c  serial.h  stddef.h  stdint.h  syscall.c  syscall.h  task.c  task.h  timer.c  timer.h  vfs.c  vfs.h
src/kernel/drivers/: keyboard.c  keyboard.h  serial.c  serial.h  timer.c  timer.h  vga.c  vga.h
src/kernel/fs/: initrd.c  initrd.h  vfs.c  vfs.h
src/kernel/include/: io.h  panic.h  serial.h  types.h  vga.h
src/kernel/ipc/: ipc.c  ipc.h
src/kernel/lib/: printk.c  printk.h  string.c  string.h
src/kernel/loader/: elf.c  elf.h
src/kernel/mm/: heap.c  heap.h  pmm.c  pmm.h  vmm.c  vmm.h
src/kernel/process/: fd_table.c  fd_table.h  process.c  process.h  scheduler.c  scheduler.h
src/mm/: heap.c  heap.h  pmm.c  pmm.h  vmm.c  vmm.h
src/user/: shell.c
user/display_server/: Cargo.toml  build.rs
user/init/: Cargo.toml  build.rs  linker.ld
user/init/src/: main.rs
user/libmnos/: Cargo.toml
user/libmnos/src/: heap.rs  io.rs  ipc.rs  irq.rs  lib.rs  process.rs  syscall.rs
user/serial_drv/: Cargo.toml  build.rs  linker.ld
user/serial_drv/src/: main.rs
user/shell/: build.rs
user/shell/src/: main.rs
userspace/: test.c
userspace/shell/: shell.c
(+23 files in other folders)
