[package]
name = "minimalos_kernel"
version = "0.0.88"
edition = "2021"

[dependencies]
limine = "0.5"
x86_64 = "0.15"
spin = "0.9"
klog = { path = "../crates/klog" }
kdisplay = { path = "../crates/kdisplay" }
khal = { path = "../crates/khal" }
tinywasm = { version = "0.8", default-features = false, features = ["parser"] }
