[package]
name = "minimalos_kernel"
version = "0.0.88"
edition = "2021"

[dependencies]
limine = "0.5"
x86_64 = "0.15"
spin = "0.9"
linked_list_allocator = "0.10"
klog = { path = "../crates/klog" }
khal = { path = "../crates/khal" }
tinywasm = { version = "0.8", default-features = false, features = ["parser"] }
